[package]
name = "parsebin"
version = "0.1.0"
edition = "2021"
authors = ["Daniel <animcuil@gmail.com>"]
description = "A LSP implementation for EBNF."
readme = "README.md"
repository = "https://github.com/DanielHauge/parsebin"
license = "Apache-2.0"


[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
