[package]
name = "parsebin"
version = "0.1.2"
edition = "2021"
authors = ["Daniel <animcuil@gmail.com>"]
description = "An very simple tool to parse binary data and print primitive values to standard out."
readme = "README.md"
repository = "https://github.com/DanielHauge/parsebin"
license = "Apache-2.0"


[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
